--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,8 @@
 body {
     margin: 0;
     font: normal 75% Arial, Helvetica, sans-serif;
+    color: white;
+    font-family: "sourcecodepro";
 }
 
 center {
@@ -16,12 +18,6 @@ center {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-}
-
-img {
-    border-radius: 100%;
-    width: 200px;
-    height: 200px;
 }
 
 h1 {
@@ -38,6 +34,53 @@ h3 {
     font-family: "sourcecodepro";
 }
 
+.button {
+    background-color: #3b96d9;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5%;
+}
+
+.cardbutton {
+    background-color: #3b96d9;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5%;
+}
+
+.homeicon {
+    border-radius: 100%;
+    width: 128px;
+    height: 128px;
+}
+
+.sm {
+    width: 64px;
+    height: 64px;
+}
+
+.cards {
+    width: 128px;
+    height: 128px;
+    border-style: dotted;
+    border-width: 10px;
+    border-color: #3b96d9;
+}
+
 bottom {
     position: absolute;
     text-align: center;
@@ -51,7 +94,7 @@ bottom {
     position: absolute;
     left: 50%;
     top: 4%;
-    white-space: nowrap; 
+    white-space: nowrap;
     color: rgb(53, 54, 61);
     z-index: 10;
 }
@@ -78,7 +121,7 @@ bottom {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: #3b96d9;
+    background-color: #1e3e56;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
